Cleanup old references to JNR in doc